feat: add image upload route
