# src/docs/openapi.yml
@@ -17,6 +17,28 @@ paths:
           description: API is up and running
         "500":
           $ref: "#/components/responses/InternalErrorResponse"
+  /api/upload:
+    post:
+      summary: Upload recipe image
+      tags:
+        - media
+      security:
+        - OAuth2PasswordBearer: []
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                media:
+                  type: string
+                  format: base64
+      responses:
+        "200":
+          description: API is up and running
+        "500":
+          $ref: "#/components/responses/InternalErrorResponse"
   /api/token:
     post:
       summary: Sign in
